--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "arcane-status",
   "version": "1.0.0",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12"
+    "playwright": "^1.43.0"
   }
 }
