--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,31 +2,37 @@ name: Scrape server status
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # toutes les minutes
-  workflow_dispatch:
+    - cron: '*/1 * * * *'   # Toutes les minutes
+  workflow_dispatch:         # Permet de lancer manuellement le workflow
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout du dépôt
         uses: actions/checkout@v3
 
       - name: Installer Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
 
-      - name: Installer dépendances
+      - name: Installer les dépendances
         run: npm install playwright
 
-      - name: Scraper les serveurs
+      - name: Lancer le script de scraping
         run: node scrape.js
 
-      - name: Commit et push
+      - name: Vérifier les modifications
+        run: git status
+
+      - name: Commit et push du fichier server-status.json
         run: |
-          git config --global user.name "ServerBot"
-          git config --global user.email "bot@example.com"
+          git config user.name "ServerBot"
+          git config user.email "serverbot@example.com"
           git add server-status.json
-          git commit -m "Update server status [automated]"
-          git push
+          git diff --cached --quiet || (
+            git commit -m "Update server status [automated]"
+            git push
+          )
